@@ -50,6 +50,12 @@ pre,code,tt {
   border: 1px solid black;
 }
 
+/* Examples */
+.example,.informalexample {
+  padding-left: 7px;
+  border-left: 3px solid black;
+}
+
 /* Command synopsis */
 .cmdsynopsis p {
   padding: 0;
